3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

More compound animations. Make animations loop instead of resetting all the time.
Fix missing first animation pic in some cases.
 common/anim.c
 server/skill_util.c
Nicolas Weeger 2007-12-16

Add line/row info to cjson module upon error
Tchize 2007-12-18

Added my missing entries to Changelog
Tchize 2007-12-18

Add try_find_animation() for compound animations, LOG() again in find_animation().
 common/anim.c
 include/libproto.h
Nicolas Weeger 2007-12-16

Fix incorrect "setup sound FALSEFALSE" response.
 socket/request.c
Andreas Kirschbaum 2007-12-18

Add Object.NoDamage and Object.RandomMovement to Python Crossfire Object.
 plugins/cfpython/cfpython_object.c
 plugins/cfpython/include/cfpython_object_private.h
Nicolas Weeger 2007-12-16

Add 'apply' sound, sounds for spell casting. Give more sounds when emitter is in
 something on a map.
 doc/Developers/sound
 server/apply.c spell_util.c
 socket/sounds.c
Nicolas Weeger 2007-12-16

New sound support. Check doc/Developers/sound.
 common/loader.l
 doc/Developers/protocol sound
 include/newserver.h object.h sockproto.h sounds.h
 server/apply.c attack.c player.c server.c spell_effect.c spell_util.c
 socket/request.c sounds.c
 types/cf_handle/cf_handle.c
 types/clock/clock.c
 types/hole/hole.c
 types/poison/poison.c
 types/spellbook/spellbook.c
 types/trapdoor/trapdoor.c
 types/trigger/trigger.c
Nicolas Weeger 2007-12-16

Do not forget background music when swapping map.
 common/map.c
Andreas Kirschbaum 2007-12-15

Do not include stray \n character in background_music field. Do not modify
const strings.
common/map.c common/region.c
Andreas Kirschbaum 2007-12-15
